--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -5,6 +5,6 @@ spring.datasource.password=tim123
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
