--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>3.3.0</version>
+		</dependency>
 
 	</dependencies>
 
